Fix focus color

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -260,6 +260,10 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
     color: #FFF;
 }
 
+.main-btn:focus {
+    color: #FFF;
+}
+
 .white-btn {
     background: #FFF;
     color: #10161A !important;
